# focusButtler

./: .flutter-plugins-dependencies  .gitignore  .packages  Hyperfocus AI App_ UI_UX Design Principles.md  LICENSE  README.md  analysis_options.yaml  pubspec.yaml
.dart_tool/: package_config.json  package_graph.json
.letta/: settings.json  settings.local.json  skills-hash.json
focusbuttler_agents/: .env.example  README.md  main.py  pyproject.toml
focusbuttler_agents/agents/: __init__.py  energy_advisor.py  focus_guardian.py  productivity_coach.py  task_categorizer.py
focusbuttler_agents/knowledge/: __init__.py  productivity_kb.py
focusbuttler_agents/teams/: __init__.py  hyperfocus_team.py
focusbuttler_agents/tools/: __init__.py
hyperfocus_server/hyperfocus_server_client/: README.md  pubspec.yaml
hyperfocus_server/hyperfocus_server_flutter/: README.md  pubspec.yaml
hyperfocus_server/hyperfocus_server_server/: Dockerfile  README.md  pubspec.yaml
lib/: main.dart
lib/models/: achievement.dart  energy_level.dart  task.dart  user_profile.dart
lib/providers/: focus_provider.dart
lib/screens/: achievements_screen.dart  add_task_screen.dart  capture_screen.dart  focus_screen.dart  home_screen.dart  main_scaffold.dart  review_screen.dart  settings_screen.dart
lib/services/: ai_task_categorizer.dart  energy_tracker.dart  smart_scheduler.dart  task_manager.dart
lib/utils/: datetime_utils.dart  theme.dart
lib/widgets/: energy_tracker_widget.dart  focus_ritual_sheet.dart  task_card.dart
skills/: agents-md
web/: index.html
(+70 files in other folders)
